Corrected dark mode in options

--- a/src/static/styles/dark-mode.css
+++ b/src/static/styles/dark-mode.css
@@ -1,3 +1,13 @@
+[data-theme="dark"] #option_button {
+
+  color: #fff !important;
+}
+
+[data-theme="dark"] #option-modal {
+
+  color: #333  !important;
+}
+
 [data-theme="dark"] {
   background-color: #111 !important;
   color: #eee;
